fix vertical align

--- a/style.css
+++ b/style.css
@@ -147,20 +147,30 @@ body{
     height: 20vh;
     background: #ffbc2e;
     margin-right: 3%;
+    position: relative;
+    vertical-align: top;
 }
 .group_name{
     margin: 0 auto;
     width: 80%;
-    padding-top: 32%;
+    /* line-height: 20vh; */
+    /* padding-top: 32%; */
+    /* height: 20vh; */
     text-align: center;
     vertical-align: middle;
     font-weight: bold;
     font-size: 24px;
+    height: 20vh;
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 .group_name:hover{
     margin: 0 auto;
     width: 80%;
-    padding-top: 32%;
+    /* padding-top: 32%; */
     text-align: center;
     vertical-align: middle;
     font-weight: bold;
@@ -168,7 +178,10 @@ body{
     color: black;
 }
 .counts{
-    padding-top: 25%;
+    /* padding-top: 25%;
     padding-right: 5%;
-    float: right;
+    float: right; */
+    position: absolute;
+    bottom: 5%;
+    right: 2%;
 }
